--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "A palindrome is a word, phrase, number, or another sequence of characters which reads the same backward or forward",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec spec.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "lodash": "^4.17.2"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "supertest": "^2.0.1"
   }
 }
